Fixed a margin error on mobile

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body {
     font-size: 40px;
     color: #ffffff;
     gap: 20px;
-    margin-left: 10px;
     font-weight: bold;
+    padding-left: 10px;
 }
 
 .right {
@@ -27,7 +27,7 @@ body {
     align-items: center;
     gap: 50px;
     font-size: 30px;
-    margin-right: 10px;
+    padding-right: 10px;
 }
 
 a.decor {
@@ -81,23 +81,14 @@ a.decor {
 
 .container {
     display: flex;
-    width: 940px;
-    justify-content: right;
-    padding-right: 200px;
+    align-items: right;
 }
 
 .quote {
     display: flex;
     padding: 20px;
-    justify-content: center;
     font-size: 22px;
     max-width: 900px;
-}
-
-.from {
-    display: flex;
-    font-size: 22px;
-    justify-items: right;
 }
 
 .section3 {
